--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,6 @@
       "@/*": ["./*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "components/UserInfo.jsx", "components/RegisterForm.jsx", "components/LoginForm.jsx"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "components/UserInfo.jsx", "components/RegisterForm.jsx", "components/LoginForm.jsx", "app/api/register/route.js"],
   "exclude": ["node_modules"]
 }
