auth frontend tested

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "jotai": "^2.5.1",
     "next": "13.5.4",
     "next-auth": "^4.23.2",
     "react": "^18",
