--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "animate.css": "^4.1.1",
+    "html-react-parser": "^5.0.11",
     "jotai": "^2.5.1",
     "next": "13.5.3",
     "next-auth": "^4.23.2",
