--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.1.1",
+    "@material-tailwind/react": "^2.1.8",
     "animate.css": "^4.1.1",
     "html-react-parser": "^5.0.11",
     "jotai": "^2.5.1",
